Update popup text and add status display for flashcard extraction

--- a/manifest.json
+++ b/manifest.json
@@ -22,8 +22,8 @@
   },
   "content_scripts": [
     {
-      "matches": ["*://*.studygo.com/nl/learn/lists/*"],
-      "js": ["content.js"]
+      "matches": ["*://*.studygo.com/*/learn/lists/*"],
+      "js": ["content_studygo.js"]
     }
   ],
   "icons": {
